second section code

--- a/index.html
+++ b/index.html
@@ -93,6 +93,28 @@
 
 		</section>
 
+		<!-- second section start here  -->
+
+         <section id="second_section">
+               <h2 class="smart_title">Smart Area</h2>
+		    <div id="smart_parent">
+               
+			<div class="smart_image">
+                 <img src="images/omen1.png" alt="">    
+			</div>
+
+			<div class="smart_text">
+                  <h4>TRY SOMETHING NEW FOR YOU!</h4>
+				  <h2>Create Own Business</h2>
+				  <p>The standard lorem ipsum passage has been a printer's friend for centuries. Like stock photos today, it served as a placeholder for actual content. The original text comes from Cicero's philosophical work "De Finibus Bonorum et Malorum," written in 45 BC. standard lorem ipsum passage has been a printer's friend for centuries. Like stock photos today, it served as a placeholder for actual content. The original text comes from Cicero's philosophical work "De Finibus Bonorum et Malorum," written in 45 BC.</p>
+				  <a href="#">Check Out</a>
+			</div>
+				
+
+			</div>
+			
+		 </section>
+
 	</main>
 </body>
 </html>
