about sction code

--- a/index.html
+++ b/index.html
@@ -115,6 +115,57 @@
 			
 		 </section>
 
+		 <!-- Third section start here  -->
+
+		 <section id="third_section">
+                 
+			   <div id="about_parent">
+
+				<div class="more_about_venilla">
+					<h4>More About Venilla</h4>
+					<p>The standard lorem ipsum passage has been printer's friend for centuries. Like stock photos today. The standard lorem ipsum passage has been printer's friend for centuries.</p>
+
+					<ul>
+						<li>The standard lorem ipsum passage has </li>
+						<li>Original text comes from Cicero's</li>
+						<li>Standard lorem ipsum passage has been</li>
+						<li>Like stock photos today, it served</li>
+					</ul>
+					<a href="#">Learn More About Us</a>
+				</div>
+
+				<div id="about_single_item_parent">
+
+					<div class="about_single_item">
+						<h4>Clasic Modern Design</h4>
+						<p>The standard lorem ipsum passage has been printer's friend for centuries. Like stock photos today.</p>
+
+					</div>
+
+					<div class="about_single_item">
+						<h4>Unique & Creative Ideas</h4>
+						<p>The standard lorem ipsum passage has been printer's friend for centuries. Like stock photos today.</p>
+
+					</div>
+
+					<div class="about_single_item">
+						<h4>Effective Team Work</h4>
+						<p>The standard lorem ipsum passage has been printer's friend for centuries. Like stock photos today.</p>
+
+					</div>
+
+					<div class="about_single_item">
+						<h4>Fast Support 24/7</h4>
+						<p>The standard lorem ipsum passage has been printer's friend for centuries. Like stock photos today.</p>
+
+					</div>
+
+				</div>
+
+			   </div>
+
+		 </section>
+
 	</main>
 </body>
 </html>
