take care section

--- a/index.html
+++ b/index.html
@@ -265,6 +265,32 @@
 
 		 </section>
 
+		 <!-- Seven section start here  -->
+
+		 <section id="seven_section">
+			<div id="takecare_parent">
+
+				<div class="single_takecare"> 
+					<h3>Every Part of Your IT Ecosystem. Take Care of.</h3>
+					<p>The standard lorem ipsum passage has been a printer's friend for centuries.</p>
+					<ul>
+						<li>Consulting</li>
+						<li>Implementation</li>
+						<li>Management and Support</li>
+						<li>Security</li>
+						<li>Migration</li>
+						
+					</ul>
+				</div>
+
+				<div class="single_takecare_imagebox">
+					<img src="images/new3.jpg">
+				</div>
+
+			</div>
+
+		 </section>
+
 	</main>
 </body>
 </html>
