--- a/index.html
+++ b/index.html
@@ -290,7 +290,36 @@
 			</div>
 
 		 </section>
-
 	</main>
+
+	<footer>
+		<div id="footer_parent">
+             <div class="single_footer">
+				<h5> <span>[</span> ABOUT US <span>]</span> </h5>
+				<p>The standard lorem ipsum passage has been a printer's friend for centuries. Like stock photos today.</p>
+			 </div>
+
+			 <div class="single_footer single_footer2">
+				<h5><span>[</span>  QUICK LINKS <span>]</span> </h5>
+				<p> <a href="#"> <i class="fas fa-angle-right"></i>About</a> </p>
+				<p> <a href="#"> <i class="fas fa-angle-right"></i>Services</a> </p>
+				<p> <a href="#"> <i class="fas fa-angle-right"></i>Technologies</a> </p>
+			 </div>
+
+			 <div class="single_footer single_footer3">
+				<h5> <span>[</span> SOCIAL MEDIA <span>]</span> </h5>
+				<ul>
+					<li> <a href="#"><i class="fas fa-times"></i></a> </li>
+					<li> <a href="#"><i class="fab fa-facebook"></i></a> </li>
+					<li> <a href="#"><i class="fab fa-instagram"></i></a> </li>
+					<li> <a href="#"><i class="fab fa-linkedin"></i></a> </li>
+				</ul>
+
+			 </div>
+		</div>
+
+		<hr style="margin: 80px 0px 30px 0px;">
+		<p style="text-align: center; color: white;"> &copy; 2026 - Web Designing Learning || All Rights Reserved to Sabbir Sheikh</p>
+	</footer>
 </body>
 </html>
